[gd_scene load_steps=3 format=3 uid="uid://c6qjr3xkyw8da"]

[ext_resource type="Script" path="res://src/ui/hud.gd" id="1_hud"]
[ext_resource type="Theme" path="res://theme/game_theme.tres" id="2_theme"]

[node name="HUD" type="CanvasLayer"]
theme = ExtResource("2_theme")
script = ExtResource("1_hud")

[node name="TopBar" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="DayLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 0
text = "Day 1"

[node name="TimeLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 0
text = "08:00"

[node name="PeriodLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 0
text = "Morning"

[node name="SpeedButton" type="Button" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 0
text = "1x"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoneyLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 8
text = "$1000"
